# aeroquery

./: .gitignore  README.md  deneme.output.py  deneme.py  deneme_webcam.py  pyproject.toml  requirements.txt
src/aeroquery/: agent.py  api.py  detect.py  rag.py  reports.py  storage.py  video.py
src/aeroquery.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_smoke.py
