[project]
name = "aeroquery"
version = "0.1.0"
description = "Drone object detection system with LLM agent and RAG for natural-language querying"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "ultralytics",
    "ollama",
    "chromadb",
    "numpy",
    "opencv-python",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"